--- a/app/ui/global.css
+++ b/app/ui/global.css
@@ -1,6 +1,6 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
 
 input[type='number'] {
   -moz-appearance: textfield;
@@ -15,4 +15,9 @@ input[type='number']::-webkit-inner-spin-button {
 input[type='number']::-webkit-outer-spin-button {
   -webkit-appearance: none;
   margin: 0;
+}
+
+a {
+  color: rgb(34, 211, 238);
+  text-decoration: none;
 }
