--- a/app/ui/global.css
+++ b/app/ui/global.css
@@ -17,7 +17,16 @@ input[type='number']::-webkit-outer-spin-button {
   margin: 0;
 }
 
-a {
-  color: rgb(34, 211, 238);
-  text-decoration: none;
+@layer base {
+  a {
+    @apply text-cyan-500;
+  }
+
+  button {
+    @apply text-black;
+  }
+
+  button:hover {
+    @apply bg-slate-50 transition-all;
+  }
 }
